hphp/hack/test/typecheck/coeffects/cipp_ns.php.exp
File "cipp_ns.php", line 16, characters 5-19:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "cipp_ns.php", line 15, characters 18-22:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "cipp_ns.php", line 9, characters 30-42:
  But the function being called requires the capability set {ImplicitPolicyOf<A>, ReadGlobals, System, WriteProperty}
File "cipp_ns.php", line 17, characters 5-19:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "cipp_ns.php", line 15, characters 18-22:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "cipp_ns.php", line 10, characters 30-43:
  But the function being called requires the capability set {ImplicitPolicyOf<A>, ReadGlobals, System, WriteProperty}
File "cipp_ns.php", line 18, characters 5-18:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "cipp_ns.php", line 15, characters 18-22:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "cipp_ns.php", line 12, characters 29-45:
  But the function being called requires the capability set {ImplicitPolicyOf<mixed>, ReadGlobals, System, WriteProperty}
File "cipp_ns.php", line 19, characters 5-20:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "cipp_ns.php", line 15, characters 18-22:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "cipp_ns.php", line 13, characters 31-49:
  But the function being called requires the capability set {ImplicitPolicyOf<nothing>, ReadGlobals, System, WriteProperty}
